<resources>
    <string name="app_name">Lab_3_Android</string>
    <string name="button_main">Send</string>
    <string name="placeholder">Imagen de virus COVID-19</string>
    <string name="text_virus">Virus</string>
    <string name="text_sintomas">Sintomas</string>
    <string name="text_indicaciones">Indicaciones</string>
    <string name="text_nombre">Nombre</string>
    <string name="text_edad">Edad</string>
    <string name="text_coronavirus">Coronavirus</string>

    <string name="campo_vacio">Algun campo esta vacio!</string>

    <string name="mensaje_alto_riesgo">, por tu edad estas el alto riesgo si contraes el virus</string>
    <string name="mensaje_medio_riesgo">, por tu edad estas el alto riesgo si contraes el virus</string>
    <string name="mensaje_bajo_riesgo">, por tu edad estas el alto riesgo si contraes el virus</string>
    <string name="edad_fuera_rango">Ingrese edad entre 1 a 150 años</string>

    <string name="article_heading">Coronavirus (COVID-19)</string>

    <string name="article_subheading"> </string>
    <string name="article_subheading_sintomas">Sintomas</string>
    <string name="article_subheading_indicaciones">Indicaciones</string>

    <string name="article_content"> <b>¿Qué es un coronavirus?</b> son una extensa familia de virus que pueden causar
        enfermedades tanto en animales como en humanos. En los humanos, se sabe que varios coronavirus
        causan infecciones respiratorias que pueden ir desde el resfriado común hasta enfermedades más graves.
    <b>\n\nLa COVID-19</b> es la enfermedad infecciosa causada por el coronavirus que se ha descubierto más recientemente. Tanto el nuevo
        virus como la enfermedad eran desconocidos antes de que estallara el brote en Wuhan (China) en diciembre de 2019.
    <b>\n\n¿Cómo se propaga la COVID-19?</b>
    Una persona puede contraer la COVID-19 por contacto con otra que esté infectada por el virus. La enfermedad puede propagarse de
        persona a persona a través de las gotículas procedentes de la nariz o la boca que salen despedidas cuando una persona
        infectada tose o exhala. Estas gotículas caen sobre los objetos y superficies que rodean a la persona, de modo que otras
        personas pueden contraer la COVID-19 si tocan estos objetos o superficies y luego se tocan los ojos, la nariz o la boca.
        También pueden contagiarse si inhalan las gotículas que haya esparcido una persona con COVID-19 al toser o exhalar.
        Por eso es importante mantenerse a más de 1 metro (3 pies) de distancia de una persona que se encuentre enferma.</string>

    <string name="article_content_sintomas">
        <b>¿Cuáles son los síntomas de la COVID-19?</b> Los síntomas más comunes de la COVID-19 son fiebre, cansancio y tos seca.
        Algunos pacientes pueden presentar dolores, congestión nasal, rinorrea, dolor de garganta o diarrea. Estos síntomas
        suelen ser leves y aparecen de forma gradual. Algunas personas se infectan pero no desarrollan ningún síntoma y no se
        encuentran mal \n\n
        La mayoría de las personas (alrededor del 80%) se recupera de la enfermedad sin necesidad de realizar ningún tratamiento
        especial. Alrededor de 1 de cada 6 personas que contraen la COVID-19 desarrolla una enfermedad grave y tiene dificultad
        para respirar. Las personas mayores y las que padecen afecciones médicas subyacentes, como hipertensión arterial,
        problemas cardiacos o diabetes, tienen más probabilidades de desarrollar una enfermedad grave. \n\n
        En torno al 2% de las personas que han contraído la enfermedad han muerto.  Las personas que tengan fiebre, tos y
        dificultad para respirar deben buscar atención médica.
    </string>

    <string name="article_content_indicaciones">
        <b>¿Qué puedo hacer para protegerme y prevenir la propagación de la enfermedad?</b>
        Manténgase al día de la información más reciente sobre el brote de COVID-19, a la que puede acceder en el sitio web de la
        OMS y a través de las autoridades de salud pública pertinentes a nivel nacional y local. \n\n
        Lávese las manos a fondo y con frecuencia usando un desinfectante a base de alcohol o con agua y jabón.\n\n
        Mantenga una distancia mínima de 1 metro (3 pies) entre usted y cualquier persona que tosa o estornude.\n\n
        Evite tocarse los ojos, la nariz y la boca\n\n
        Tanto usted como las personas que les rodean deben asegurarse de mantener una buena higiene de las vías respiratorias.
        Eso significa cubrirse la boca y la nariz con el codo doblado o con un pañuelo de papel al toser o estornudar. \n\n
        Permanezca en casa si no se encuentra bien. Si tiene fiebre, tos y dificultad para respirar, busque atención médica y llame con antelación.\n\n
        Manténgase informado sobre las últimas novedades en relación con la COVID-19. Siga los consejos de su dispensador de atención de
        salud, de las autoridades sanitarias pertinentes a nivel nacional y local. \n\n
        Consulte las noticias más recientes sobre las zonas de mayor peligro (es decir, las ciudades y lugares donde la enfermedad
        se está propagando más extensamente). Si le es posible, evite desplazarse a estas zonas, sobre todo si su edad es
        avanzada o tiene usted diabetes, cardiopatías o neumopatías. \n\n
        Permanezca en casa si empieza a encontrarse mal, aunque se trate de síntomas leves como dolor de cabeza, fiebre ligera
        (37,3 oC o más) y rinorrea leve, hasta que se recupere. Si le resulta indispensable salir de casa o recibir una visita
        (por ejemplo, para conseguir alimentos), póngase una mascarilla para no infectar a otras personas. \n\n
        Si tiene fiebre, tos y dificultad para respirar, busque rápidamente asesoramiento médico, ya que podría deberse a una
        infección respiratoria u otra afección grave. Llame con antelación e informe a su dispensador de atención de salud sobre
        cualquier viaje que haya realizado recientemente o cualquier contacto que haya mantenido con viajeros.

    </string>


</resources>
