<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>
        <variable
            name="model"
            type="com.example.lab_3_android.Model" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <Button
            android:id="@+id/btn_indicaciones"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_btn_new_activity"
            android:fontFamily="@font/roboto"
            android:text="@string/text_indicaciones"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/blueOrigin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/text_nombre"
            android:inputType="textPersonName"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/text_descripcion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_nombre"
            app:layout_constraintTop_toBottomOf="@+id/image_covid" />

        <ImageView
            android:id="@+id/image_covid"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/placeholder"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/covid" />

        <Button
            android:id="@+id/btn_sintomas"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_btn_new_activity"
            android:fontFamily="@font/roboto"
            android:text="@string/text_sintomas"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/blueOrigin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_indicaciones"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toEndOf="@+id/btn_virus" />

        <Button
            android:id="@+id/btn_virus"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_btn_new_activity"
            android:fontFamily="@font/roboto"
            android:text="@string/text_virus"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/blueOrigin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_nombre"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:text="@{model.nombre}"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_edad"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:text="@{model.edad}"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText_edad"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_edad"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/text_edad"
            android:inputType="numberDecimal"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/text_descripcion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_edad"
            app:layout_constraintTop_toBottomOf="@+id/editText_name" />

        <ImageButton
            android:id="@+id/btn_estrella"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="155dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_next_btn"
            android:onClick="mostrarRiesgo"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_covid"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/text_coronavirus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/text_coronavirus"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/editText_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_covid" />

        <TextView
            android:id="@+id/text_descripcion"
            android:layout_width="407dp"
            android:layout_height="250dp"
            android:paddingStart="30dp"
            android:paddingTop="70dp"
            android:text="@string/mensaje_alto_riesgo"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constrainedHeight="false"
            app:layout_constrainedWidth="false"
            app:layout_constraintBottom_toTopOf="@+id/btn_sintomas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="text_nombre,text_edad"
            tools:layout_editor_absoluteX="411dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

